Added users full management happy path
